fix header overflow bug

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,6 +3,7 @@
 html {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
+  width: 100%;
 }
 
 .main-content {
@@ -80,6 +81,15 @@ header .mobile {
 }
 
 @media only screen and (max-width: 760px) {
+
+  header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    max-width: 100%;
+  }
+
   header .desktop {
     display: none;
   }
@@ -91,13 +101,13 @@ header .mobile {
 
   header .content {
     padding: .5rem 0;
+    width: 100%;
   }
 
   header .mobile ul {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    max-width: 100%;
   }
 
   header .mobile li {
@@ -140,7 +150,7 @@ header .mobile {
 }
 
 #sign-up-cta .content {
-  width: 25.625rem;
+  width: 100%; /* 25.625rem; */
   margin-top: 2rem;
   font-family: "Roboto", sans-serif;
   font-size: 1.25rem;
